elimine el mdi ya que se hacia dificil eliminar la barra de opciones superior, ahora es un solo panel en el form main que funciona de manera dinamica dependiendo de la opcion que pulse el usuario en el sidebar

--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -159,6 +159,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Ayuda.resx">
+      <DependentUpon>Ayuda.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Blog.resx">
       <DependentUpon>Blog.vb</DependentUpon>
     </EmbeddedResource>
