--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -172,12 +172,14 @@
       <DependentUpon>frmAgregarMarca.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms Modules\frmsInventario\frmAgregarMarca.vb">
+    <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms Modules\frmsInventario\frmAgregarProducto.Designer.vb">
       <DependentUpon>frmAgregarProducto.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms Modules\frmsInventario\frmAgregarProducto.vb">
       <SubType>Form</SubType>
-    </Compile>
+    </Compile>    
     <Compile Include="frmBienvenidaLogin.Designer.vb">
       <DependentUpon>frmBienvenidaLogin.vb</DependentUpon>
     </Compile>
@@ -250,6 +252,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsInventario\frmAgregarMarca.resx">
       <DependentUpon>frmAgregarMarca.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsInventario\frmAgregarProducto.resx">
       <DependentUpon>frmAgregarProducto.vb</DependentUpon>
     </EmbeddedResource>
