--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -87,6 +87,7 @@
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=7.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Diagnostics.DiagnosticSource.7.0.2\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Pipelines, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.IO.Pipelines.5.0.2\lib\net461\System.IO.Pipelines.dll</HintPath>
@@ -154,6 +155,42 @@
       <DependentUpon>frmAyuda.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms Modules\frmsAyuda\frmAyuda.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaDevolucion.Designer.vb">
+      <DependentUpon>frmAyudaDevolucion.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaDevolucion.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaEntrega.Designer.vb">
+      <DependentUpon>frmAyudaEntrega.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaEntrega.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaPedidos.Designer.vb">
+      <DependentUpon>frmAyudaPedidos.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaPedidos.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaPagoPromociones.Designer.vb">
+      <DependentUpon>frmAyudaPagoPromociones.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaPagoPromociones.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaPoliticas.Designer.vb">
+      <DependentUpon>frmAyudaPoliticas.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaPoliticas.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaUsuario.Designer.vb">
+      <DependentUpon>frmAyudaUsuario.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms Modules\frmsAyuda\frmAyudaUsuario.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms Modules\frmsBlogSugerencias\frmBlogSugerencias.Designer.vb">
@@ -235,6 +272,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsAyuda\frmAyuda.resx">
       <DependentUpon>frmAyuda.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms Modules\frmsAyuda\frmAyudaDevolucion.resx">
+      <DependentUpon>frmAyudaDevolucion.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms Modules\frmsAyuda\frmAyudaEntrega.resx">
+      <DependentUpon>frmAyudaEntrega.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms Modules\frmsAyuda\frmAyudaPedidos.resx">
+      <DependentUpon>frmAyudaPedidos.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms Modules\frmsAyuda\frmAyudaPagoPromociones.resx">
+      <DependentUpon>frmAyudaPagoPromociones.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms Modules\frmsAyuda\frmAyudaPoliticas.resx">
+      <DependentUpon>frmAyudaPoliticas.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms Modules\frmsAyuda\frmAyudaUsuario.resx">
+      <DependentUpon>frmAyudaUsuario.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsBlogSugerencias\frmBlogSugerencias.resx">
       <DependentUpon>frmBlogSugerencias.vb</DependentUpon>
