--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -198,7 +198,8 @@
       <DependentUpon>frmHomeTicket.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms Modules\frmsTickets\frmHomeTicket.vb">
-
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmBienvenidaLogin.Designer.vb">
       <DependentUpon>frmBienvenidaLogin.vb</DependentUpon>
     </Compile>
