--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -289,6 +289,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsTickets\frmHomeTicket.resx">
       <DependentUpon>frmHomeTicket.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmBienvenidaLogin.resx">
       <DependentUpon>frmBienvenidaLogin.vb</DependentUpon>
     </EmbeddedResource>
