Implementacion de DAO

--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -133,11 +133,11 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-        <Compile Include="Class Modules\analitica\analitycDAO.vb" />
+    <Compile Include="Class Modules\analitica\analitycDAO.vb" />
     <Compile Include="Class Modules\blog %28sugerencias%29\Class2.vb" />
     <Compile Include="Class Modules\clientes\Class3.vb" />
-    <Compile Include="Class Modules\inventario\Class4.vb" />
-        <Compile Include="Class Modules\tickets\ticketsDAO.vb" />
+    <Compile Include="Class Modules\inventario\inventaryDAO.vb" />
+    <Compile Include="Class Modules\tickets\ticketsDAO.vb" />
     <Compile Include="Class Modules\ventas\Class6.vb" />
     <Compile Include="Forms Modules\frmsAnaliticas\frmAnalitica.Designer.vb">
       <DependentUpon>frmAnalitica.vb</DependentUpon>
@@ -187,7 +187,6 @@
     <Compile Include="Forms Modules\frmsInventario\frmAgregarProducto.vb">
       <SubType>Form</SubType>
     </Compile>
-
     <Compile Include="Forms Modules\frmsTickets\frmDetalleTicket.Designer.vb">
       <DependentUpon>frmDetalleTicket.vb</DependentUpon>
     </Compile>
@@ -219,6 +218,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Interfaces Modules\analitica\analitycInterfaces.vb" />
+    <Compile Include="Interfaces Modules\inventario\inventaryInterfaces.vb" />
     <Compile Include="Interfaces Modules\tickets\ticketsInterfaces.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -260,7 +260,7 @@
     <Compile Include="Standard Modules\PanelModule.vb" />
   </ItemGroup>
   <ItemGroup>
-  <EmbeddedResource Include="Forms Modules\frmsAnaliticas\frmAnalitica.resx">
+    <EmbeddedResource Include="Forms Modules\frmsAnaliticas\frmAnalitica.resx">
       <DependentUpon>frmAnalitica.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsAnaliticas\frmAnaliticaVentas.resx">
