--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -133,7 +133,6 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class Modules\analitica\analitycDAO.vb" />
     <Compile Include="Class Modules\blog %28sugerencias%29\Class2.vb" />
     <Compile Include="Class Modules\clientes\Class3.vb" />
     <Compile Include="Class Modules\inventario\Class4.vb" />
@@ -143,12 +142,6 @@
       <DependentUpon>frmAnalitica.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms Modules\frmsAnaliticas\frmAnalitica.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms Modules\frmsAnaliticas\frmAnaliticaVentas.Designer.vb">
-      <DependentUpon>frmAnaliticaVentas.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Forms Modules\frmsAnaliticas\frmAnaliticaVentas.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms Modules\frmsAyuda\frmAyuda.Designer.vb">
@@ -191,12 +184,6 @@
       <DependentUpon>frmAyudaUsuario.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms Modules\frmsAyuda\frmAyudaUsuario.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms Modules\frmsBlogSugerencias\frmBlogSugerencias.Designer.vb">
-      <DependentUpon>frmBlogSugerencias.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Forms Modules\frmsBlogSugerencias\frmBlogSugerencias.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms Modules\frmsClientes\frmClientes.Designer.vb">
@@ -287,9 +274,6 @@
     <EmbeddedResource Include="Forms Modules\frmsAnaliticas\frmAnalitica.resx">
       <DependentUpon>frmAnalitica.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms Modules\frmsAnaliticas\frmAnaliticaVentas.resx">
-      <DependentUpon>frmAnaliticaVentas.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsAyuda\frmAyuda.resx">
       <DependentUpon>frmAyuda.vb</DependentUpon>
     </EmbeddedResource>
@@ -310,9 +294,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsAyuda\frmAyudaUsuario.resx">
       <DependentUpon>frmAyudaUsuario.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms Modules\frmsBlogSugerencias\frmBlogSugerencias.resx">
-      <DependentUpon>frmBlogSugerencias.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsClientes\frmClientes.resx">
       <DependentUpon>frmClientes.vb</DependentUpon>
@@ -369,6 +350,7 @@
     <None Include="Resources\logo.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Class Modules\analitica\" />
     <Folder Include="Database Scripts\Store Procedures\analitica\" />
     <Folder Include="Database Scripts\Store Procedures\ayuda\" />
     <Folder Include="Database Scripts\Store Procedures\clientes\" />
