--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -298,6 +298,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsInventario\frmInventario.resx">
       <DependentUpon>frmInventario.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
