dataset de prueba agregado

--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -364,6 +364,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Database Scripts\dataset\ScriptDataSet.sql" />
     <Content Include="Resources\dataConfig.xml" />
     <None Include="Resources\logo.png" />
   </ItemGroup>
